@@ -1,67 +1,96 @@
 package kh.educat.cstad.aftmobilebankingapi.service.impl;
 
 import kh.educat.cstad.aftmobilebankingapi.domain.Customer;
-import kh.educat.cstad.aftmobilebankingapi.dto.CustomerResponse;
-import kh.educat.cstad.aftmobilebankingapi.dto.CustomerRequest;
-import kh.educat.cstad.aftmobilebankingapi.dto.CustomerResponse;
+import kh.educat.cstad.aftmobilebankingapi.dto.*;
+import kh.educat.cstad.aftmobilebankingapi.mapper.CustomerMapper;
 import kh.educat.cstad.aftmobilebankingapi.repository.CustomerRepository;
-//import kh.educat.cstad.aftmobilebankingapi.model.Customer;
-
 import kh.educat.cstad.aftmobilebankingapi.service.CustomerService;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
-public  class CustomerServiceImpl implements CustomerService {
+@Transactional
+public class CustomerServiceImpl implements CustomerService {
 
     private final CustomerRepository customerRepository;
+    private final CustomerMapper customerMapper;
+
+
+    @Transactional
+    @Override
+    public void disableBYPhoneNumber(String phoneNumber){
+        if (!customerRepository.existsByPhoneNumber(phoneNumber)) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND,"Customer Phone Number Not Found");
+        }
+        customerRepository.disableByPhoneNumber (phoneNumber);
+    }
+
+
+
     @Override
     public List<CustomerResponse> findByAll() {
-        List<Customer> customers = customerRepository.findAll();
-        return customers.stream()
-                .map(customer -> CustomerResponse.builder()
-                        .fullname(customer.getFullname())
-                        .gender(customer.getGender())
-                        .email(customer.getEmail())
-                        .build()
-                )
-                .toList();
+        return customerRepository.findAll().stream()
+                .map(customerMapper::toCustomerResponse)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public CustomerResponse createNew(CustomerRequest createCustomerRequest) {
-        if (customerRepository.existsByEmail(createCustomerRequest.email()))
+    public CustomerResponse createNew(CustomerRequest request) {
+        if (customerRepository.existsByEmail(request.email())) {
             throw new ResponseStatusException(HttpStatus.CONFLICT, "Email already exists");
-
-        if (customerRepository.existsByPhoneNumber(createCustomerRequest.phoneNumber()))
+        }
+        if (customerRepository.existsByPhoneNumber(request.phoneNumber())) {
             throw new ResponseStatusException(HttpStatus.CONFLICT, "Phone number already exists");
+        }
 
-        Customer customer = new Customer();
-        customer.setFullname(createCustomerRequest.fullname());
-        customer.setGender(createCustomerRequest.gender());
-        customer.setEmail(createCustomerRequest.email());
-        customer.setPhoneNumber(createCustomerRequest.phoneNumber());
-        customer.setRemark(createCustomerRequest.remark());
+        Customer customer = customerMapper.fromCustomerRequest(request);
         customer.setIsDeleted(false);
+        log.info("Saving customer: {}", customer.getFullName());
+        customer = customerRepository.save(customer);
+        return customerMapper.toCustomerResponse(customer);
+    }
 
-        log.info("Customer ID before save: {}", customer.getId());
-        customer  = customerRepository.save(customer);
-        log.info("Customer ID after save: {}", customer.getId());
+    @Override
+    public CustomerResponse findByPhoneNumber(String phoneNumber) {
+        return customerRepository
+                .findByPhoneNumber(phoneNumber)
+                .map(customerMapper::toCustomerResponse)
+                .orElseThrow(
+                        () -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Phone number not found"));
+    }
 
+    @Override
+    public CustomerResponse updateByPhoneNumber(String phoneNumber, UpdateCustomerRequest updateRequest) {
+        Customer customer = customerRepository
+                .findByPhoneNumber(phoneNumber)
+                .orElseThrow(
+                        () -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Phone number not found"));
 
+        customerMapper.updateCustomerPartially(updateRequest, customer);
+        customer = customerRepository
+                .save(customer);
 
-        return CustomerResponse.builder()
-                .fullname(customer.getFullname())
-                .gender(customer.getGender())
-                .email(customer.getEmail())
-                .build();
+        return customerMapper.toCustomerResponse(customer);
+    }
+
+    @Override
+    public void disableByPhoneNumber(String phoneNumber) {
+
+        if (!customerRepository.existsByPhoneNumber(phoneNumber)) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Phone number not found");
+        }
+        customerRepository.disableByPhoneNumber(phoneNumber);
+
     }
 }
